--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,31 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      <header style="
+        background-color: #EB9532;
+        color: #FFFFFF;
+        margin: 0px;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        position: fixed;
+        z-index: +999;
+        width: 100%;
+        top: 0;
+        left: 0;">
+        <span style="
+          color: #FFFFFF;
+          font-size: 1.5em;
+          font-family: Arial;
+          font-weight: bold;">NENDOHOUSE</span>
+      </header>
+      <section style="width: 100%; height: 300px; background-color: #353535; color: #FFFFFF">
+        <h1>NENDOHOUSE COLLECTIONS</h1>
+        <p style="margin-top: -20px">Your #1 Nendoroid Marketplace</p>
+      </section>
     </noscript>
     <div id="root"></div>
     <!--
