update critical render section styling

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
   </head>
   <body>
     <noscript>
+    </noscript>
+    <div id="root">
       <header style="
         background-color: #EB9532;
         color: #FFFFFF;
@@ -44,12 +46,11 @@
           font-family: Arial;
           font-weight: bold;">NENDOHOUSE</span>
       </header>
-      <section style="width: 100%; height: 300px; background-color: #353535; color: #FFFFFF">
+      <section style="width: 100%; height: 300px; background-color: #353535; color: #FFFFFF; padding-top: 50px; text-align: center">
         <h1>NENDOHOUSE COLLECTIONS</h1>
         <p style="margin-top: -20px">Your #1 Nendoroid Marketplace</p>
       </section>
-    </noscript>
-    <div id="root"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
