--- a/public/index.html
+++ b/public/index.html
@@ -61,5 +61,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+        window.onload = function()
+        {
+            document.getElementById('first_style').removeAttribute('disabled');
+        }
+    </script>
   </body>
 </html>
